Bug 942754 - Propagate zoom constraints from parent to child APZCs. r=kats

--HG--
extra : rebase_source : 92c3dcac3db2cd457d650ec08abfbab03c9517ce